--- a/tables_gain_model.tex
+++ b/tables_gain_model.tex
@@ -1,33 +1,44 @@
 \begin{table}[ht]
 \centering
-\footnotesize{
-  \begin{tabular}{cc|c|cc|cc}
+\small{
+  \begin{tabular}{cc|ccc}
    \hline
     \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \textbf{\small{Retro}} & \multicolumn{2}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{2}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \scriptsize{\textit{milliseconds}} & \textbf{\textit{\scriptsize{Var / Retro}}} & \textbf{\textit{\scriptsize{Sub / Retro}}} & \textbf{\textit{\scriptsize{Var / Retro}}} & \textbf{\textit{\scriptsize{Sub / Retro}}} \\
+    \multicolumn{2}{c|}{\multirow{2}{*}{\normalsize{\textbf{Data}}}} & \multicolumn{3}{c}{\normalsize{\textbf{YapTab}}} \\
+     \multicolumn{2}{c|}{} & \small{\textit{Retro}} & \textit{\small{Var / Retro}} & \textit{\small{Sub / Retro}} \\
    \hline
    \hline
    
-   \multirow{5}{*}{\textbf{genome}} &  chain  (16384)  &  24 &  383.50  &  0.58  &  799.96 &  0.50 \\
-   &  cycle  (8192)  &  13 &  180.92  &  0.69  &  400.00 &  0.62 \\
-   &  grid  (64)  &  12 &  91.17  &  0.67  &  127.08 &  \textbf{1.08} \\
-   &  pyramid  (4096)  &  12 &  162.50  &  0.67  &  194.00 &  0.67 \\
-   &  tree  (32768)  &  60 &  752.52  &  0.47  &  730.60 &  0.83 \\
+   \multirow{5}{*}{genome} &  \footnotesize{chain  (16384)} &  24 &  \textbf{799.96}  &  0.50 \\
+   &  \footnotesize{cycle  (8192)} &  13 &  \textbf{400.00}  &  0.62 \\
+   &  \footnotesize{grid  (64)} &  12 &  \textbf{127.08}  &  \textbf{1.08} \\
+   &  \footnotesize{pyramid  (4096)} &  12 &  \textbf{194.00}  &  0.67 \\
+   &  \footnotesize{tree  (32768)} &  60 &  \textbf{730.60}  &  0.83 \\
    \hline
 
-   \multirow{3}{*}{\textbf{reach\_first}} &  iproto  &  1920 &  2.52  &  2.92  &  1.57 &  \textbf{1.49} \\
-   &  leader  &  2644 &  4.41  &  4.90  &  4.70 &  \textbf{1.82} \\
-   &  sieve  &  16191 &  2.27  &  2.73  &  1.36 &  \textbf{1.97} \\
+   \multirow{3}{*}{reach\_first} &  \footnotesize{iproto } &  1920 &  \textbf{1.57}  &  \textbf{1.49} \\
+   &  \footnotesize{leader} &  2644 &  \textbf{4.70}  &  \textbf{1.82} \\
+   &  \footnotesize{sieve} &  16191 &  \textbf{1.36}  &  \textbf{1.97} \\
    \hline
-   \multirow{3}{*}{\textbf{reach\_last}} &  iproto  &  1957 &  2.48  &  2.73  &  1.54 &  \textbf{1.46} \\
-   &  leader  &  2570 &  4.52  &  4.80  &  6.04 &  \textbf{1.98} \\
-   &  sieve  &  15001 &  2.20  &  2.50  &  2.08 &  \textbf{2.16} \\
+   \multirow{3}{*}{reach\_last} &  \footnotesize{iproto } &  1957 &  \textbf{1.54}  &  \textbf{1.46} \\
+   &  \footnotesize{leader} &  2570 &  \textbf{6.04}  &  \textbf{1.98} \\
+   &  \footnotesize{sieve} &  15001 &  \textbf{2.08}  &  \textbf{2.16} \\
    \hline
-\multicolumn{2}{c|}{\textbf{flora}} & 72 & 2.5 & 0.29 & 3.17 & \textbf{1.17} \\
+   \multicolumn{2}{c|}{flora} & 72 & \textbf{3.17} & \textbf{1.17} \\
+   \hline
+   \multirow{4}{*}{fib} &  30 &  248 &  \textbf{1.82}  &  \textbf{1.87} \\
+   &  32 &  578 &  \textbf{2.00}  &  \textbf{2.05} \\
+   &  35 &  2502 &  \textbf{1.96}  &  \textbf{1.94} \\
+   &  36 &  3936 &  \textbf{2.02}  &  \textbf{2.24} \\
+   \hline
+   \multirow{3}{*}{big} &  5 &  577 &  \textbf{6.57}  &  \textbf{6.20} \\
+   &  10 &  581 &  \textbf{11.63}  &  \textbf{12.79} \\
+   &  20 &  581 &  \textbf{21.58}  &  \textbf{21.98} \\
+   \hline
 \hline
 \end{tabular}
 }
-\caption{Detailed gain results: \texttt{genome}, model checking and \texttt{flora} programs.}
+\caption{Times, in milliseconds, and speedups for RCS in YapTab: \textbf{genome}, model checking, \textbf{flora},
+\textbf{fib}, and \textbf{big} programs.}
 \label{tbl:results_detail_gain_model}
 \end{table}
