--- a/tables_stst_overhead.tex
+++ b/tables_stst_overhead.tex
@@ -1,54 +1,55 @@
 \begin{table}[ht]
 \centering
-\footnotesize{
-  \begin{tabular}{cc|c|cc}
+\small{
+  \begin{tabular}{cc|ccc}
    \hline
     \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \textbf{\small{Retro}} & \multicolumn{2}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \scriptsize{\textit{milliseconds}} & \textbf{\textit{\scriptsize{Var / Retro}}} & \textbf{\textit{\scriptsize{Sub / Retro}}} \\
+    \multicolumn{2}{c|}{\multirow{2}{*}{\normalsize{\textbf{Data}}}} & \multicolumn{3}{c}{\normalsize{\textbf{YapTab}}} \\
+    \multicolumn{2}{c|}{} & \small{\textit{Retro}} & \textit{\small{Retro / Var}} & \textit{\small{Retro / Sub}} \\
    \hline
    \hline
+   
+   \multirow{5}{*}{left\_first} &  \footnotesize{chain (2048)} & 812 &  1.21  &  1.30 \\
+   &  \footnotesize{cycle (2048)} & 1722 &  1.08  &  1.14 \\
+   &  \footnotesize{grid (64)} & 17261 &  1.38  &  1.17 \\
+   &  \footnotesize{pyramid (1024)} & 869 &  1.18  &  1.23 \\
+   &  \footnotesize{tree (65536)} & 573 &  1.23  &  1.17 \\
+   \hline
+   \multirow{5}{*}{left\_last} &  \footnotesize{chain (2048)} & 894 &  1.35  &  1.42 \\
+   &  \footnotesize{cycle (2048)} & 1794 &  1.13  &  1.29 \\
+   &  \footnotesize{grid (64)} & 18187 &  1.47  &  1.23 \\
+   &  \footnotesize{pyramid (1024)} & 862 &  1.14  &  1.24 \\
+   &  \footnotesize{tree (65536)} & 582 &  1.27  &  1.19 \\
+   \hline
 
-\multirow{5}{*}{\textbf{left\_first}} &  chain &  792 &  0.87 & 0.81 \\
-&  cycle &  1712 &  0.96 & 0.79 \\
-&  grid &  16913 &  0.75 & 0.99 \\
-&  pyramid &  836 &  0.89 & 0.82 \\
-&  tree &  556 &  0.86 & 0.88 \\
-\hline
-\multirow{5}{*}{\textbf{left\_last}} &  chain &  1060 &  0.64 & 0.61 \\
-&  cycle &  1744 &  0.93 & 0.78 \\
-&  grid &  19545 &  0.64 & 0.73 \\
-&  pyramid &  828 &  0.92 & 0.86 \\
-&  tree &  588 &  0.79 & 0.85 \\
-\hline
-\multirow{5}{*}{\textbf{right\_first}} &  chain &  4004 &  0.82 & 0.82 \\
-&  cycle &  7300 &  0.92 & 1.08 \\
-&  grid &  1140 &  0.80 & 0.76 \\
-&  pyramid &  3156 &  0.86 & 0.99 \\
-&  tree &  288 &  0.85 & 1.00 \\
-\hline
-\multirow{5}{*}{\textbf{right\_last}} &  chain &  3612 &  1.06 & 0.92 \\
-&  cycle &  9492 &  0.80 & 0.75 \\
-&  grid &  1000 &  1.18 & 0.97 \\
-&  pyramid &  3176 &  0.90 & 0.90 \\
-&  tree &  532 &  0.67 & 0.92 \\
-\hline
+   \multirow{5}{*}{right\_first} &  \footnotesize{chain (4096)} & 4004 &  1.21  &  1.21 \\
+   &  \footnotesize{cycle (4096)} & 7324 &  1.09  &  1.04 \\
+   &  \footnotesize{grid (32)} & 1130 &  1.27  &  1.29 \\
+   &  \footnotesize{pyramid (2048)} & 3172 &  1.17  &  1.10 \\
+   &  \footnotesize{tree (32768)} & 300 &  1.15  &  1.04 \\
+   \hline
+   \multirow{5}{*}{right\_last} &  \footnotesize{chain (4096)} & 3642 &  \textbf{0.95}  &  1.08 \\
+   &  \footnotesize{cycle (4096)} & 7965 &  \textbf{0.98}  &  1.12 \\
+   &  \footnotesize{grid (32)} & 997 &  \textbf{0.96}  &  1.22 \\
+   &  \footnotesize{pyramid (2048)} & 3170 &  1.09  &  1.12 \\
+   &  \footnotesize{tree (32768)} & 528 &  1.76  &  1.05 \\
+   \hline
 
-\multirow{5}{*}{\textbf{double\_first}} &  chain &  1696 &  0.25 & 0.58 \\
-&  cycle &  2916 &  0.93 & 0.54 \\
-&  grid &  3920 &  0.66 & 0.69 \\
-&  pyramid &  6804 &  0.27 & 0.65 \\
-&  tree &  708 &  0.50 & 0.91 \\
-\hline
-\multirow{5}{*}{\textbf{double\_last}} &  chain &  1880 &  0.23 & 0.50 \\
-&  cycle &  2924 &  0.92 & 0.54 \\
-&  grid &  3928 &  0.65 & 0.69 \\
-&  pyramid &  6808 &  0.27 & 0.66 \\
-&  tree &  724 &  0.50 & 0.87 \\
-\hline
+   \multirow{5}{*}{double\_first} &  \footnotesize{chain (256)} & 1708 &  3.94  &  1.58 \\
+   &  \footnotesize{cycle (256)} & 2945 &  1.11  &  1.51 \\
+   &  \footnotesize{grid (16)} & 3936 &  1.53  &  1.53 \\
+   &  \footnotesize{pyramid (256)} & 7480 &  4.04  &  1.44 \\
+   &  \footnotesize{tree (16384)} & 766 &  2.19  &  1.35 \\
+   \hline
+   \multirow{5}{*}{double\_last} &  \footnotesize{chain (256)} & 1778 &  4.08  &  1.69 \\
+   &  \footnotesize{cycle (256)} & 2932 &  1.10  &  1.64 \\
+   &  \footnotesize{grid (16)} & 3956 &  1.57  &  1.54 \\
+   &  \footnotesize{pyramid (256)} & 6829 &  3.70  &  1.30 \\
+   &  \footnotesize{tree (16384)} & 720 &  2.04  &  1.29 \\
+   \hline
 \hline
 \end{tabular}
 }
-\caption{Detailed execution time for the query goal `\texttt{?-~path(f(X),f(Y))}'.}
+\caption{Times, in milliseconds, and overheads for the query goal `\texttt{?-~path(f(X),f(Y))}'.}
 \label{tbl:results_detail_stst}
 \end{table}
