--- a/tables_sub_space.tex
+++ b/tables_sub_space.tex
@@ -1,78 +1,54 @@
 \begin{table}[ht]
 \centering
-\footnotesize{
-  \begin{tabular}{cc|c|cc}
+\small{
+  \begin{tabular}{cc|ccc}
    \hline
     \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \textbf{\small{Sub / Var}} & \multicolumn{2}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \scriptsize{\textit{ratio}} & \textbf{\textit{\scriptsize{Variant}}} & \textbf{\textit{\scriptsize{Subsumptive}}} \\
+    \multicolumn{2}{c|}{\multirow{2}{*}{\normalsize{\textbf{Data}}}} & \multicolumn{3}{c}{\normalsize{\textbf{YapTab}}} \\
+     \multicolumn{2}{c|}{} & \textit{\small{Var}} & \textit{\small{Sub}} & \textit{\small{Ratio}} \\
    \hline
-   \hline
-   \multirow{5}{*}{\textbf{left\_first}} &  chain (4096) &  1.00000 &  8390656 & 8390656
-   \\
-   &  cycle (4096) &  1.00000 &  16781313 & 16781313
-   \\
-   &  grid (64) &  1.00000 &  16781313 & 16781313
-   \\
-   &  pyramid (4096) &  1.00000 &  25171968 & 25171968
-   \\
-   &  tree (32768) &  1.00000 &  442370 & 442370
-   \\
    \hline
    
-   \multirow{5}{*}{\textbf{right\_first}} &  chain (4096) &  0.50012 &  16777216 & 8390656
-   \\
-   &  cycle (4096) &  0.50000 &  33562625 & 16781313
-   \\
-   &  grid (64) &  0.50000 &  33562625 & 16781313
-   \\
-   &  pyramid (4096) &  0.50008 &  50335744 & 25171968
-   \\
-   &  tree (32768) &  0.50943 &  868356 & 442370
-   \\
+   \multirow{5}{*}{left\_first} &  \footnotesize{chain (4096)} &  8390656 & 8390656 &  1.00000 \\
+   &  \footnotesize{cycle (4096)} &  16781313 & 16781313 &  1.00000 \\
+   &  \footnotesize{grid (64)} &  16781313 & 16781313 &  1.00000 \\
+   &  \footnotesize{pyramid (4096)} &  25171968 & 25171968 &  1.00000 \\
+   &  \footnotesize{tree (32768)} &  442370 & 442370 &  1.00000 \\
    \hline
-\multirow{5}{*}{\textbf{double\_first}} &  chain (512) &  0.50098 &  262144 & 131328
-\\
-&  cycle (512) &  0.50000 &  525313 & 262657
-\\
-&  grid (16) &  0.50000 &  131585 & 65793
-\\
-&  pyramid (512) &  0.50065 &  786944 & 393984
-\\
-&  tree (32768) &  0.50943 &  868356 & 442370
-\\
-\hline
 
-\multirow{5}{*}{\textbf{samegen}} &  chain (32768) &  0.00002 &  131071 & 3
-\\
-&  cycle (16384) &  0.00005 &  65539 & 3
-\\
-&  grid (32) &  0.49903 &  1050627 & 524291
-\\
-&  pyramid (4096) &  0.33335 &  49147 & 16383
-\\
-&  tree (8192) &  0.79965 &  27974313 & 22369623
-\\
-\hline
-
-\multirow{5}{*}{\textbf{genome}} &  chain (16384) &  1.00000 &  16383 & 16383
-\\
-&  cycle (8192) &  1.00000 &  8193 & 8193
-\\
-&  grid (64) &  1.00000 &  4097 & 4097
-\\
-&  pyramid (4096) &  1.00000 &  4096 & 4096
-\\
-&  tree (32768) &  1.00000 &  16383 & 16383
-\\
-\hline
-
-
-\multicolumn{2}{c|}{\textbf{flora}} & 0.36173 & 83564 & 30228 \\
+   \multirow{5}{*}{right\_first} &  \footnotesize{chain (4096)} &  16777216 & 8390656 &  0.50012 \\
+   &  \footnotesize{cycle (4096)} &  33562625 & 16781313 &  0.50000 \\
+   &  \footnotesize{grid (64)} &  33562625 & 16781313 &  0.50000 \\
+   &  \footnotesize{pyramid (4096)} &  50335744 & 25171968 &  0.50008 \\
+   &  \footnotesize{tree (32768)} &  868356 & 442370 &  0.50943 \\
+   \hline
+   
+   \multirow{5}{*}{double\_first} &  \footnotesize{chain (512)} &  262144 & 131328 &  0.50098 \\
+   &  \footnotesize{cycle (512)} &  525313 & 262657 &  0.50000 \\
+   &  \footnotesize{grid (16)} &  131585 & 65793 &  0.50000 \\
+   &  \footnotesize{pyramid (512)} &  786944 & 393984 &  0.50065 \\
+   &  \footnotesize{tree (32768)} &  868356 & 442370 &  0.50943 \\
+   \hline
+   
+   \multirow{5}{*}{samegen} &  \footnotesize{chain (32768)} &  131071 & 3 &  0.00002 \\
+   &  \footnotesize{cycle (16384)} &  65539 & 3 &  0.00005 \\
+   &  \footnotesize{grid (32)} &  1050627 & 524291 &  0.49903 \\
+   &  \footnotesize{pyramid (4096)} &  49147 & 16383 &  0.33335 \\
+   &  \footnotesize{tree (8192)} &  27974313 & 22369623 &  0.79965 \\
+   \hline
+   
+   \multirow{5}{*}{genome} &  \footnotesize{chain (16384)} &  65533 & 49151 &  0.75002 \\
+   &  \footnotesize{cycle (8192)} &  32771 & 24580 &  0.75005 \\
+   &  \footnotesize{grid (64)} &  16387 & 12292 &  0.75011 \\
+   &  \footnotesize{pyramid (4096)} &  24575 & 16385 &  0.66673 \\
+   &  \footnotesize{tree (32768)} &  98299 & 65534 &  0.66668 \\
+   \hline
+  
+\multicolumn{2}{c|}{flora} & 83564 & 30228 & 0.36173 \\
 \hline
 \hline
 \end{tabular}
 }
-\caption{Detailed comparison between variant and subsumption-based tabling for stored answer trie nodes.}
+\caption{Number of stored answer trie nodes for variant and subsumption-based tabling in YapTab.}
 \label{tbl:results_detail_space_sub}
 \end{table}
