Time-Stamped -> Time Stamped

--- a/abstract.tex
+++ b/abstract.tex
@@ -13,7 +13,7 @@ While subsumption-based tabling can yield superior time performance by allowing 
 reuse, its efficient implementation is harder than variant-based tabling, which makes tabling engines
 with variant checks much more popular in the logic community.
 
-This thesis first addresses the porting and integration of the \emph{Time-Stamped Tries} mechanism
+This thesis first addresses the porting and integration of the \emph{Time Stamped Tries} mechanism
 from the SLG-WAM tabling engine into the YapTab tabling engine. Our performance results show that our
 integration efforts were successful, with comparable speedups when using subsumptive-tabling against
 variant-tabling.
