--- a/abstract_pt.tex
+++ b/abstract_pt.tex
@@ -14,7 +14,7 @@ Embora a tabulação por subsumpção consiga atingir maiores ganhos em termos d
 mais difícil em comparação com tabulação por variantes, o que faz com que este último seja bastante mais popular
 entre os motores de tabulação disponíveis.
 
-Esta tese descreve a migração e integração do mecanismo de \emph{Time-Stamped Tries} do motor de tabulação
+Esta tese descreve a migração e integração do mecanismo de \emph{Time Stamped Tries} do motor de tabulação
 SLG-WAM no motor de tabulação YapTab. Os resultados obtidos mostram que os nossos esforços de integração foram
 bem sucedidos, com desempenhos comparavéis aos da SLG-WAM na execução entre tabulação por variantes e tabulação
 por subsumpção.
