--- a/conclusions.tex
+++ b/conclusions.tex
@@ -9,7 +9,7 @@ We can identify two main contributions of this thesis. The first main contributi
 the TST approach for a call subsumption into YapTab's engine. The second main contribution is the design and implementation
 of a new tabling execution mechanism called Retroactive Call Subsumption, that maximizes the sharing of answers
 between subsumed/subsuming subgoals. In order to implement the subsumption algorithms and data structures for
-these two mechanisms we took advantage of the Time-Stamped Tries original proposal from XSB.
+these two mechanisms we took advantage of the Time Stamped Tries original proposal from XSB.
 This process made us to also understand the differences and similarities between the YapTab and the SLG-WAM tabling engines.
 
 We next detail the most important aspects of the work developed during this thesis:
