--- a/ack.tex
+++ b/ack.tex
@@ -5,7 +5,7 @@ certainly become a better researcher because of him.
 To João Santos, João Raimundo, José Vieira and Miguel Areias for the excellent work environment
 and companionship.
 
-To all my friends from FEUP, for their friendship and the great moments we have spent together in
+To my friends from FEUP, for their friendship and the great moments we have spent together in
 the last five years. 
 
 Finally, I would like to thank my parents and sisters, for their unconditional love and support,
